--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-Class-Helpers
 
+0.093070 Mon Nov 02 23:16:00 CDT 2009
+       - Add virtual view method to clean SQL namespace
+       - Add methods to generate has_many and many_to_many for join tables
+       - Hopefully fix deps for real
+
 0.093000 Sat Oct 26 19:40:00 CDT 2009
        - Add parent as a dependency
        - Super basic POD cleanup
